[gd_scene load_steps=3 format=3 uid="uid://cq1wpwvwb4g1u"]

[ext_resource type="Script" path="res://starting_screen.gd" id="1_ho7jf"]

[sub_resource type="LabelSettings" id="LabelSettings_81xcl"]
font_size = 20

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ho7jf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = -21.5
offset_right = 41.5
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerCountCont2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayerCountLabel" type="Label" parent="VBoxContainer/PlayerCountCont2"]
layout_mode = 2
text = "Player Count: "
label_settings = SubResource("LabelSettings_81xcl")

[node name="PlayerCount" type="SpinBox" parent="VBoxContainer/PlayerCountCont2"]
layout_mode = 2
min_value = 2.0
max_value = 10.0
value = 2.0

[node name="FinishedCont" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Cancel" type="Button" parent="VBoxContainer/FinishedCont"]
layout_mode = 2
text = "Cancel"

[node name="Start Game" type="Button" parent="VBoxContainer/FinishedCont"]
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="VBoxContainer/FinishedCont/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/FinishedCont/Start Game" to="." method="_on_start_game_pressed"]
